syntax = "proto3";

package com.example.internal.input.reqreply.device;

import "com/example/commonmodels/device/device.proto";
import "com/example/commonmodels/error.proto";

option java_multiple_files = true;
option java_package = "com.example.internal.input.reqreply.device.update.proto";

message UpdateDeviceRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;
  commonmodels.device.Device.StatusType status_type = 5;
}

message UpdateDeviceResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.device.Device device = 1;
  }

  message Failure {
    string message = 100;
    oneof error {
      commonmodels.Error device_not_found = 1;
    }
  }
}
